# KODA-Coding-Agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
coding_agent/: ARCHITECTURE.md  Readme.md  __init__.py  agent.py  backend.py  compaction.py  mcp.py  model.py  subagents.py  system_prompt_v2.py  tools.py  tracing.py
docs/: inline-ui-redesign.md
docs/prompts/: koda_system_prompt_resolved.md  pi_amp_prompt_tool_loop_notes.md  pi_system_prompt_resolved.md
examples/: __init__.py  deepagents_backend.py  fastapi_agent.py
examples/hermes_agent/: __init__.py  agent.py  skill_author.py
examples/koda_agent/: __init__.py  deep_agent.py  prompt.py  skills.py  tools.py
koda/: __init__.py  __main__.py  agent_api.py  bridge.py  conversation_log.py  env_file.py  model_config.py  modes.py  provider_models.py  session.py  session_store.py  subagent_tasks.py  subagent_tools.py  summarizer.py  timing.py
koda-ink/: README.md  package-lock.json  package.json  tsconfig.json
koda-ink/src/: App.tsx  banner.ts  bridge.ts  cli.tsx  completer.ts  markdown.tsx  modes.ts  theme.ts  transcript.ts  types.ts
koda-ink/src/components/: AskUser.tsx  Completion.tsx  Dashboard.tsx  Input.tsx  Message.tsx  Permission.tsx  SessionPicker.tsx  StatusBar.tsx  TaskBar.tsx
koda/adapters/: __init__.py  anthropic.py  base.py  coding_agent.py  deep.py  langgraph.py
koda/agents/: tools.py
koda/tools/: __init__.py  ask_user.py  fs.py  permissions.py  web.py
scripts/: run_coding_agent_oneshot.py
tests/: test_bridge.py  test_ollama_cloud_routing.py  test_session_store.py  test_subagent_gating.py  test_subagent_tasks.py
