[project]
name = "koda"
version = "0.4.0"
description = "KODA — agent-agnostic AI coding TUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Badar-e-Alam" },
]
keywords = ["cli", "tui", "llm", "agent", "langgraph", "deepagents", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]

dependencies = [
    "python-dotenv>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "deepagents>=0.2",
    "httpx>=0.27,<0.29",
    "openai-agents>=0.14.7",
    "langfuse>=4.0,<5.0",
    "langchain-ollama>=1.1.0",
    "tavily-python>=0.5",
    "ollama>=0.4",
    "langchain-openai>=1.1.12",
    "langgraph-checkpoint-sqlite>=3.1.0",
    # MCP — lets the agent consume Model Context Protocol servers
    # (e.g. Context7 for up-to-date library docs) as LangGraph tools.
    "langchain-mcp-adapters>=0.3,<0.4",
]

[project.optional-dependencies]
# Summarizer + chat model backends — install the one(s) you use
anthropic = ["langchain-anthropic"]
openai = ["langchain-openai"]
ollama = ["langchain-ollama"]
google = ["langchain-google-genai"]
all = [
    "langchain-anthropic",
    "langchain-openai",
    "langchain-ollama",
    "langchain-google-genai",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
koda = "koda.__main__:main"

[project.urls]
Homepage = "https://github.com/Badar-e-Alam/KODA-Coding-Agent"
Repository = "https://github.com/Badar-e-Alam/KODA-Coding-Agent"
Issues = "https://github.com/Badar-e-Alam/KODA-Coding-Agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koda"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
